# matter-pool-controller

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  env.sh  partitions.csv  sdkconfig.defaults
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  SENSOR_DEVELOPMENT.md
main/: CMakeLists.txt  README.md  board_identity.h  board_pins.h  idf_component.yml  main.cpp  matter_setup.cpp  matter_setup.h  pentair_pump.cpp  pentair_pump.h  psa_init_patch.c  psa_init_patch.h  pump_control.cpp  pump_control.h  relays.cpp  relays.h  sensors.cpp  sensors.h  serial_console.cpp  serial_console.h  state.cpp  state.h  user_feedback.cpp  user_feedback.h
main/app/: main.cpp  state.cpp  state.h
main/board/: board_identity.h  board_pins.h  board_sensor_config.h
main/cloud/credentials/: cloud_config.h
main/console/: serial_console.cpp  serial_console.h
main/io/: relays.cpp  relays.h  sensors.cpp  sensors.h  user_feedback.cpp  user_feedback.h
main/matter/: matter_setup.cpp  matter_setup.h
main/platform/: psa_init_patch.h
main/pump/: jandy_pump.cpp  jandy_pump.h  pentair_pump.cpp  pentair_pump.h  pump_control.cpp  pump_control.h  pump_protocol.cpp  pump_protocol.h
main/schedule/: schedule.h
tests/: CMakeLists.txt  doctest.h  hal_mock.cpp  main.cpp  test_integration_pentair.cpp  test_integration_relays.cpp  test_pentair.cpp  test_relays.cpp  test_sensors.cpp  test_state.cpp
tests/stubs/: esp_matter.h  esp_matter_endpoint.h  esp_timer.h  hal_mock.h  nvs_flash.h
tests/stubs/board/: board_identity.h  board_pins.h
tests/stubs/driver/: gpio.h
