idf_component_register(
    SRCS
        "app/main.cpp"
        "app/state.cpp"
        "console/serial_console.cpp"
        "io/relays.cpp"
        "io/sensors.cpp"
        "io/user_feedback.cpp"
        "matter/matter_setup.cpp"
        "platform/psa_init_patch.c"
        "pump/jandy_pump.cpp"
        "pump/pentair_pump.cpp"
        "pump/pump_control.cpp"
    INCLUDE_DIRS "."
    REQUIRES
    nvs_flash
    esp_wifi
    esp_netif
    esp_event
    esp_timer
    console
    driver
    esp_driver_ledc
    mbedtls
    esp_matter
)
